--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Xiaojie Li"
+title                    : "Welcome to my site!"
 title_separator          : "-"
 name                     : &name "Xiaojie Li"
 description              : &description "Quant Marketing PhD Student"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Xiaojie Li"
   avatar           : "profile.png"
-  bio              : "Fourth-Year Marketing Ph.D. Student \\ Simon Business School, University of Rochester"
+  bio              : "Fourth-Year Marketing Ph.D. Student \n Simon Business School, University of Rochester"
   location         : "Rochester, NY"
   employer         :
   pubmed           : 
