--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Xiaojie Li"
   avatar           : "profile.png"
-  bio              : "Fourth-Year Marketing Ph.D. Student \nSimon Business School, University of Rochester"
+  bio              : "Fourth-Year Marketing Ph.D. Student \n"
   location         : "Rochester, NY"
-  employer         :
+  employer         : "Simon Business School, University of Rochester"
   pubmed           : 
   googlescholar    : 
   email            :
