--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Xiaojie Li"
   avatar           : "profile.png"
-  bio              : "Fourth-Year Marketing Ph.D. Student\n
-                      \n
+  bio              : "Fourth-Year Marketing Ph.D. Student
+                      <br><br/>
                       Simon Business School, University of Rochester"
   location         : "Rochester, NY"
   employer         : 
