--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Home"
 title_separator          : "-"
-name                     : &name "Xiaojie Li"
+name                     : &name "Xiaojie Li - Testing"
 description              : &description "Quant Marketing PhD Student"
 url                      : https://xiaojieli.info # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : #"" # the subpath of your site, e.g. "/blog"
