--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : &name "Xiaojie Li"
 description              : &description "Quant Marketing PhD Student"
 url                      : https://xiaojieli.info # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : #"" # the subpath of your site, e.g. "/blog"
-repository               : "liiiiii/webpage"
+repository               : "liiiiii/xiaojieli.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -208,17 +208,22 @@ defaults:
     values:
       layout: single
       author_profile: true
-      share: true
-      comments: true
-  # _publications
+  # _research
   - scope:
       path: ""
-      type: publications
+      type: research
     values:
       layout: single
       author_profile: true
-      share: true
-      comments: true
+
+  # _cv
+  - scope:
+      path: ""
+      type: cv
+    values:
+      layout: single
+      author_profile: true
+
 
 
 # Sass/SCSS
