--- a/_config.yml
+++ b/_config.yml
@@ -194,6 +194,17 @@ collections:
 
 # Defaults
 defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
   # _pages
   - scope:
       path: ""
@@ -215,16 +226,25 @@ defaults:
     values:
       layout: single
       author_profile: true
-
-  # _cv
+      share: true
+      comments: true
+  # _portfolio
   - scope:
       path: ""
-      type: cv
+      type: portfolio
     values:
       layout: single
       author_profile: true
-
-
+      share: true
+      comment: true
+  # _talks
+  - scope:
+      path: ""
+      type: talks
+    values:
+      layout: talk
+      author_profile: true
+      share: true
 
 # Sass/SCSS
 sass:
