--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Xiaojie Li"
-  avatar           : "profilepic.jpg"
+  avatar           : "profile.png"
   bio              : "Fourth-Year Marketing Ph.D. Student
                       <br><br/>
                       Simon Business School, University of Rochester"
