--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : "Xiaojie Li"
   avatar           : "profilepic.png"
-  bio              : "Fourth-Year Marketing Ph.D. Student
+  bio              : "Fifth-Year Marketing Ph.D. Student
                       <br><br/>
                       Simon Business School, University of Rochester"
   location         : "Rochester, NY"
