--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ author:
   employer         : 
   pubmed           : 
   googlescholar    : 
-  email            :
+  email            : xiaojie.li [at] simon.rochester.edu
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
