--- a/_config.yml
+++ b/_config.yml
@@ -118,7 +118,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
-  ssrn             : https://papers.ssrn.com/sol3/cf_dev/AbsByAuth.cfm?per_id=3170279
+  ssrn             : "https://papers.ssrn.com/sol3/cf_dev/AbsByAuth.cfm?per_id=3170279"
 
 
 # Reading Files
