--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Xiaojie Li"
 title_separator          : "-"
-name                     : &name "Xiaojie Li \ [pronounced shee-ow jyeh]"
+name                     : &name "Xiaojie Li"
 description              : &description "Quant Marketing PhD Student"
 url                      : https://xiaojieli.info # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : #"" # the subpath of your site, e.g. "/blog"
@@ -81,7 +81,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Xiaojie Li"
+  name             : "Xiaojie Li  <br><br/> [pronounced shee-ow jyeh]"
   avatar           : "profilepic.png"
   bio              : "Ph.D. Candidate in Marketing
                       <br><br/>
