--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   bio              : "Ph.D. Candidate in Marketing
                       <br><br/>
                       Simon Business School, University of Rochester"
-  location         : "Rochester, NY"
+  location         : 
   employer         : 
   pubmed           : 
   googlescholar    : 
