--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,9 @@ analytics:
 author:
   name             : "Xiaojie Li" # <br><br/> [pronounced shee-ow jyeh]
   avatar           : "profilepic.png"
-  bio              : "Ph.D. Candidate in Marketing
+  bio              : "[pronounced shee-ow jyeh]
                       <br><br/>
+                      Ph.D. Candidate in Marketing
                       Simon Business School, University of Rochester"
   location         : 
   employer         : 
