--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : "Xiaojie Li" # <br><br/> [pronounced shee-ow jyeh]
   avatar           : "profilepic.png"
-  bio              : "[pronounced shee-ow jyeh]
+  bio              : "[pronounced she-ow jyeh]
                       <br><br/>
                       Ph.D. Candidate in Marketing
                       Simon Business School, University of Rochester"
