--- a/_config.yml
+++ b/_config.yml
@@ -90,8 +90,8 @@ author:
   location         : 
   employer         : 
   pubmed           : 
-  googlescholar    : 
-  email            : xiaojie.li@simon.rochester.edu
+  googlescholar    : https://scholar.google.com/citations?user=4WhEKrYAAAAJ&hl=en
+  email            : xiaojie.li@bc.edu
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
