--- a/_config.yml
+++ b/_config.yml
@@ -85,8 +85,8 @@ author:
   #avatar           : #"profile_pic.jpg"
   bio              : "[pronounced she-ow jyeh]
                       <br><br/>
-                      Ph.D. Candidate in Marketing
-                      Simon Business School, University of Rochester"
+                      Assistant Professor of Marketing
+                      Carroll School of Management, Boston College"
   location         : 
   employer         : 
   pubmed           : 
